--- a/styles.css
+++ b/styles.css
@@ -80,13 +80,34 @@ button {
   font-size: 36px;
   font-weight: bolder;
   color: #1F2937;
+  text-align: center;
 }
 
-.info .subtext {
+.box-text {
   color: #656565;
+  text-align: center;
+  font-size: 13px;
 }
 
-.image-box {
+.info-boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  gap: 30px;
+  padding: 10px 0 50px;
+}
+
+.box {
+  /* flex: 1; */
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+}
+
+.box-image {
   border: #3882f6 solid 2px;
   border-radius: 10px;
   width: 100px;
@@ -146,9 +167,6 @@ button {
 .hero-left {
   display: flex;
   flex-direction: column;
-}
-
-.info {
 }
 
 .footer {
